test/should_not_compile/inexact-hex-float.sml
val x = 0x1.0000_0000_0000_01p0;
